Testing java 19 virtual thread