@@ -522,7 +522,7 @@ public abstract class AbstractEndpoint<S,U> {
     public ScheduledExecutorService getUtilityExecutor() {
         if (utilityExecutor == null) {
             getLog().warn(sm.getString("endpoint.warn.noUtilityExecutor"));
-            utilityExecutor = new ScheduledThreadPoolExecutor(1);
+            utilityExecutor = new ScheduledThreadPoolExecutor(1,new TaskThreadFactory(getName() + "-exec-", daemon, getThreadPriority()));
         }
         return utilityExecutor;
     }
@@ -1266,7 +1266,7 @@ public abstract class AbstractEndpoint<S,U> {
         acceptor = new Acceptor<>(this);
         String threadName = getName() + "-Acceptor";
         acceptor.setThreadName(threadName);
-        Thread t = new Thread(acceptor, threadName);
+        Thread t =  Thread.ofVirtual().name(threadName).unstarted(acceptor);
         t.setPriority(getAcceptorThreadPriority());
         t.setDaemon(getDaemon());
         t.start();
